--- a/src/app/shared/components/developers/developers.component.scss
+++ b/src/app/shared/components/developers/developers.component.scss
@@ -214,7 +214,7 @@
                             color: #f55441;
                         }
         
-                        box-shadow: 8px 3px 30px;
+                        box-shadow: 0px 0px 30px #184d47;
                         transition: 0.3s;
                         cursor: pointer;
                     }
