--- a/src/app/shared/components/results/results.component.scss
+++ b/src/app/shared/components/results/results.component.scss
@@ -239,7 +239,7 @@
                         color: #f55441;
                     }
     
-                    box-shadow: 8px 3px 30px;
+                    box-shadow: 0px 0px 30px #184d47;
                     transition: 0.3s;
                 }
                  
