--- a/src/app/shared/components/single-developer/single-developer.component.scss
+++ b/src/app/shared/components/single-developer/single-developer.component.scss
@@ -52,7 +52,7 @@
             .image{
                 background: white; 
                 width: 200px;
-                padding: 5px;
+                // padding: 5px;
                 border-radius: 15px;
                 margin: 0% 5%;
 
@@ -330,7 +330,7 @@
                                 color: #f55441;
                             }
             
-                            box-shadow: 8px 3px 30px;
+                            box-shadow: 0px 0px 30px #184d47;
                             transition: 0.3s;
                         }
             
@@ -658,7 +658,7 @@
             display: flex;
             position: fixed;
             bottom: 0px;
-            z-index: 9999;
+            z-index: 999;
         }
 
         button{
